force-app/main/default/objects/Inventory__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bin Location</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Inventory Records</relationshipLabel>
    <relationshipName>Inventory_Records</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>