force-app/main/default/objects/Inventory__c/fields/On_Hand__c.field-meta.xml
<CustomField>
    <fullName>On_Hand__c</fullName>
    <defaultValue>0</defaultValue>
    <label>On Hand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>