force-app/main/default/objects/Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Low Stock</fullName>
                </value>
                <value>
                    <fullName>Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Hold</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>